fixed scrollbar change colors background

--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,26 @@
 
 body {
   font-family: "Lato", sans-serif;
-  background-color:black;
+  background-color:rgb(14, 14, 14);
   color: white;
+  overflow-y:scroll;
+
 }
+::-webkit-scrollbar{
+  background-color:rgb(14, 14, 14);
+  width: 0px;
+  background: transparent;
+}
+::-webkit-scrollbar-track{
+  border-radius: 10px;
+  background-color:rgb(14, 14, 14);
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: #D62929;
+  background-image: -webkit-linear-gradient(90deg,transparent,rgba(0, 0, 0, 0.4) 50%,transparent,transparent)
+}
+
 
 .container {
   max-width: 1400px;
@@ -25,7 +42,7 @@ ul li {
 }
 
 nav {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(14, 14, 14,0.8);
   color: white;
   display: flex;
   justify-content: space-between;
@@ -134,7 +151,7 @@ nav ul .logo {
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(14, 14, 14,0.8);
   opacity: 0.9;
   color: white;
   overflow-x: hidden;
@@ -242,6 +259,7 @@ nav ul .logo {
 }
 
 .freetowatch-cards{
+
   display: flex;
   align-items: center;
   position: relative;
@@ -338,7 +356,7 @@ nav ul .logo {
 
 /* footer section */
 .footer {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(31, 31, 31);
   padding: 70px 0;
   color: white;
 }
